--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
+    "react-native-svg": "^12.1.1",
     "react-native-webview": "^11.6.4"
   },
   "devDependencies": {
